@@ -18,7 +18,7 @@ resolver: nightly-2025-01-20
 extra-deps:
 - filepath-bytestring-1.5.2.0.2
 - aws-0.24.4
-- git-lfs-1.2.3
+- git-lfs-1.2.5
 - feed-1.3.2.1
 allow-newer: true
 allow-newer-deps:
